# CMake

./: .travis.yml  CMakeLists.txt  README.md  test.cpp
src/: main.cc  math.cc  test.cpp
test/: CMakeLists.txt  math_test.cc
